@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

package cantvasui {
    class UI {
        - in: Scanner
        + getUserCommand(): String
        + {static} printLogo()
        + {static} printHelpMessage()
        + {static} gcIntroMessage()
        + {static} gpaListHelpMessage()
        + {static} gcHelpMessage()
        + {static} printExitMessage()
        + {static} printMotivationQuote()
        + {static} printLineBreak()
        + {static} printTimetableByDay(timetable: class[])
        - {static} printTimetableByHour(timetable: class)
        - {static} expenditureHelpMessage()
        - {static} timetableHelpMessage()
        - {static} gpaHelpMessage()
    }
}

class CantVasMain {
}

class ProcessCommand {
}

package gpa{
    class ProcessListCommand {
    }

    class GPACommand {
    }
}


class ProcessGCCommand {
}


class TimetableList {
}

CantVasMain -> UI: creates and uses >
ProcessCommand ..> UI: uses >
ProcessListCommand ..> UI: uses >
ProcessGCCommand ..> UI: uses >
GPACommand ..> UI: uses >
TimetableList ..> UI: uses >

@enduml
